--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     { "name": "Simon Jefford", "email": "si@ibrokethat.com" }
   ],
   "dependencies": {
-    "is": "git+ssh://git@github.com:ibrokethat/is",
-    "iter": "git+ssh://git@github.com:ibrokethat/iter",
-    "func": "git+ssh://git@github.com:ibrokethat/func"
+    "func": "https://api.github.com/repos/ibrokethat/func/tarball#v0.0.4",
+    "is": "https://api.github.com/repos/ibrokethat/is/tarball#v0.0.4",
+    "iter": "https://api.github.com/repos/ibrokethat/iter/tarball#v0.0.4"
   },
   "devDependencies": {
     "mocha": "1.2.x",
