--- a/package.json
+++ b/package.json
@@ -1,34 +1,29 @@
 {
-  "name": "async",
-  "description": "ibrokethat promises",
+  "name": "super-async",
+  "description": "super async",
   "version": "0.0.4",
   "author": "si@ibrokethat.com",
   "contributors": [
     { "name": "Simon Jefford", "email": "si@ibrokethat.com" }
   ],
   "dependencies": {
-    "is": "https://api.github.com/repos/ibrokethat/is/tarball#v0.0.4",
-    "func": "https://api.github.com/repos/ibrokethat/func/tarball#v0.0.4",
-    "iter": "https://api.github.com/repos/ibrokethat/iter/tarball#v0.0.4"
+    "super-is": "0.0.x",
+    "super-func": "0.0.x",
+    "super-iter": "0.0.x"
   },
   "devDependencies": {
     "mocha": "1.2.x",
-    "sinon": "1.3.x",
-    "promises-aplus-tests": "*"
+    "sinon": "1.3.x"
   },
   "keywords": ["ibrokethat", "async"],
   "repository": {
     "type": "git",
     "url": "git@github.com:ibrokethat/async"
   },
-  "ibrokethat": {
-    "buildClient": true
-  },
   "main": "async.js",
   "scripts": {
     "prepublish" : "npm prune",
-    "test": "mocha -u bdd --reporter spec",
-    "stufy": "&& promises-aplus-tests test/adapter"
+    "test": "mocha -u bdd --reporter spec"
   },
   "engines": { "node": "*" }
 }
